2005-10-27  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (getModule): Call Language's resolve method.

2005-10-17  Per Bothner  <per@bothner.com>

	* ReplServlet.java: New class, extends HttpServlet.
	* ReplSession.java: New class.

2005-05-18  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (getModule): Don't set current Environment
	using current Language.

2005-03-14  Christian Surlykke <christian@surlykke.dk>

	* KawaPageServlet.java:  Missed Interpreter -> Language fix.

2005-03-07  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java: Update Interpreter -> Language.

2005-03-04  Per Bothner  <per@bothner.com>

	* KawaServlet.java: Update Interpreter -> Language.

2004-08-11  Per Bothner  <per@bothner.com>

	* KawaServlet.java (run): New abstract method, replaces ...
	(apply):   Removed abstract method.
	* KawaPageServlet.java (apply):  Rename to run.

2004-08-10  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (getProcedure): Rename to getModule and
	change return type to Module.
	(apply):  Call run method of module, not apply method.
	(class CacheEnty):  Change proc field to ModuleBody.
	* KawaServlet.java (run)  Add abstract method, overriden by compiler.
	(doGet):  Call run method, rather than apply method.

2004-08-08  Per Bothner  <per@bothner.com>

	* KawaServlet.java (doGet): Change for new Procedure API.

2004-08-03  Per Bothner  <per@bothner.com>

	* GetRequest.java:  Extend MethodProc instead of CpsProcedure.
	* GetResponse.java:  Likewise.

2003-11-16  Per Bothner  <per@bothner.com>

	* CGIServletWrapper.java (getLocalPort, getLocalName, getRemotePort):
	New methods required by Servlets 2.4.
	(setCharacterEncoding):  Remove throws clause, for 2.4 compatibility.

	* CGIServletWrapper.java (isSecure):  More real implementation.

2003-10-29  Gerardo Jorvilleur <magoghm@Prodigy.net.mx>

	* KawaServlet.java (doPost):   New method.

2003-11-02  Per Bothner  <per@bothner.com>
