@@ -7,7 +7,7 @@ import gnu.expr.*;
 import gnu.mapping.*;
 import gnu.text.*;
 import java.io.*;
-import java.net.URL;
+import java.net.*;
 import java.util.*;
 import javax.servlet.*;
 import javax.servlet.http.*;
@@ -27,7 +27,6 @@ import javax.servlet.http.*;
 public class KawaPageServlet extends KawaServlet
 {
   private static long LAST_MODIFIED_CACHE_TIME = 1000;
-  private static Map procedureCache = new WeakHashMap();
   private ServletContext context;
 
   public void init(ServletConfig config)
@@ -45,16 +44,58 @@ public class KawaPageServlet extends KawaServlet
 
     boolean saveClass = request.getParameter("qexo-save-class") != null;
     String path = request.getServletPath();
-    ModuleBody mod = getModule(ctx, path, saveClass);
+    Object mod = getModule(ctx, path, saveClass, response);
 
-    if (mod != null)
-      mod.run(ctx);
+    if (mod instanceof ModuleBody)
+      ((ModuleBody) mod).run(ctx);
   }
 
-  private ModuleBody getModule(ServletCallContext ctx, String path, boolean saveClass)
+  private static final String MODULE_MAP_ATTRIBUTE = "gnu.kawa.module-map";
+
+  private Object getModule(ServletCallContext ctx, String path, boolean saveClass, HttpServletResponse response)
     throws Exception
   {
+    Hashtable mmap
+      = (Hashtable) context.getAttribute(MODULE_MAP_ATTRIBUTE);
+    if (mmap == null)
+      {
+        mmap = new Hashtable();
+        context.setAttribute(MODULE_MAP_ATTRIBUTE, mmap);
+      }
+    ModuleContext mcontext
+      = (ModuleContext) context.getAttribute("gnu.kawa.module-context");
+    if (mcontext == null)
+      mcontext = ModuleContext.getContext();
+    ModuleInfo minfo = (ModuleInfo) mmap.get(path);
+    long now = System.currentTimeMillis();
+    // avoid hitting the disk too much
+    if (minfo != null
+        && now - minfo.lastCheckedTime < LAST_MODIFIED_CACHE_TIME)
+      return mcontext.findInstance(minfo);
+
+    ModuleManager mmanager = mcontext.getManager();
+
     URL url = context.getResource(path);
+    String upath = path;
+    if (url == null)
+      {
+        String xpath = path;
+        for (;;)
+          {
+            int sl = xpath.lastIndexOf('/');
+            if (sl < 0)
+              {
+                ctx.response.reset();
+                ctx.response.sendError(HttpServletResponse.SC_NOT_FOUND, path);
+                return null;
+              }
+            xpath = xpath.substring(0, sl);
+            upath = xpath + "/+default+";
+            url = context.getResource(upath);
+            if (url != null)
+              break;
+          }
+      }
 
     if (url == null)
       {
@@ -63,96 +104,93 @@ public class KawaPageServlet extends KawaServlet
 	return null;
       }
 
-    // don't compile the same page concurrently
-    synchronized (procedureCache)
+    URLConnection connection = url.openConnection();
+    String urlString = url.toExternalForm();
+    long lastModified = connection.getLastModified();
+    if (minfo != null
+        && minfo.lastModifiedTime == lastModified
+        && urlString.equals(minfo.sourceURL))
       {
-	CacheEntry entry = getCacheEntry(path,  url);
-
-	if (entry.proc == null || saveClass)
-	  {
-	    InputStream resourceStream = url.openStream();
-	    InPort port = new InPort(resourceStream,
-				     path.substring(path.lastIndexOf('/')+1));
-	    Language language
-	      = Language.getInstanceFromFilenameExtension(path);
-	    Language.setDefaultLanguage(language);
-	    SourceMessages messages = new SourceMessages();
-	    Compilation comp;
-	    try
-	      {
-		comp = language.parse(port, messages, Language.PARSE_IMMEDIATE);
-		String name = path.substring(path.lastIndexOf('/')+1,
-					     path.indexOf('.'));
-		comp.getModule().setName(name);
-                language.resolve(comp);
-	      }
-	    catch (SyntaxException ex)
-	      {
-		if (ex.getMessages() != messages)
-		  throw ex;
-		// Otherwise handled below ...
-		comp = null; // Needed to avoid spurious compilation error.
-	      }
-
-	    // FIXME: we could output a nice pretty HTML table of the errors
-	    // or show the script with the errors highlighted, for bonus
-	    // points the pretty page could be generated by a precompiled
-	    // xql script with the errors passed as XML somehow and accessed
-	    // via input()
-	    if (messages.seenErrors())
-	      {
-		ctx.response.reset();
-		ServletOutputStream out = ctx.response.getOutputStream();
-		out.print(messages.toString(20));
-		return null;
-	      }
-
-	    Class cl = ModuleExp.evalToClass(comp);
-
-	    if (saveClass)
-	      comp.outputClass(context.getRealPath("WEB-INF/classes")+'/');
-
-	    entry.proc = (ModuleBody) cl.newInstance();
-	  }
-
-	return entry.proc;
-      }
-  }
-
-  private CacheEntry getCacheEntry (String path, URL url)
-      throws IOException
-  {
-    CacheEntry entry = (CacheEntry) procedureCache.get(path);
-    long now = System.currentTimeMillis();
-
-    // avoid hitting the disk too much
-    if (entry != null && (now - entry.lastCheck < LAST_MODIFIED_CACHE_TIME))
-      return entry;
-
-    long lastModified = url.openConnection().getLastModified();
-
-    if (entry != null)
-      {
-	if (entry.lastModified != lastModified)
-	  entry.proc = null;
-      }
-    else
-      {
-	entry = new CacheEntry();
-	procedureCache.put(path, entry);
+        minfo.lastCheckedTime = now;
+        return mcontext.findInstance(minfo);
       }
 
-    entry.lastCheck = now;
-    entry.lastModified = lastModified;
+    minfo = mmanager.findWithURL(url);
+    minfo.lastModifiedTime = lastModified;
+    minfo.lastCheckedTime = now;
 
-    return entry;
-  }
+    InputStream resourceStream = connection.getInputStream();
+            
+    Language language
+      = Language.getInstanceFromFilenameExtension(path);
+    if (language == null)
+      language = Language.detect(resourceStream);
+    if (language == null)
+      {
+        if (path != upath)
+          {
+            ctx.response.reset();
+            ctx.response.sendError(HttpServletResponse.SC_NOT_FOUND, path);
+            return null;
+          }
+        String contentType = context.getMimeType(path);
+        response.setContentType(contentType);
+        ServletOutputStream out = response.getOutputStream();
+        byte[] buffer = new byte[4*1024];
+        for (;;)
+          {
+            int n = resourceStream.read(buffer);
+            if (n < 0)
+              break;
+            out.write(buffer, 0, n);
+          }
+        resourceStream.close();
+        return null;
+      }
+    InPort port = new InPort(resourceStream,
+                             path.substring(path.lastIndexOf('/')+1));
+    Language.setDefaultLanguage(language);
+    SourceMessages messages = new SourceMessages();
+    Compilation comp;
+    try
+      {
+        comp = language.parse(port, messages, Language.PARSE_IMMEDIATE);
+        int dot = path.indexOf('.');
+        if (dot < 0)
+          dot = path.length();
+        String name = path.substring(path.lastIndexOf('/')+1, dot);
+        comp.getModule().setName(name);
+        language.resolve(comp);
+      }
+    catch (SyntaxException ex)
+      {
+        if (ex.getMessages() != messages)
+          throw ex;
+        // Otherwise handled below ...
+        comp = null; // Needed to avoid spurious compilation error.
+      }
 
-  static class CacheEntry
-  {
-    long lastCheck;
-    long lastModified;
-    ModuleBody proc;
+    // FIXME: we could output a nice pretty HTML table of the errors
+    // or show the script with the errors highlighted, for bonus
+    // points the pretty page could be generated by a precompiled
+    // xql script with the errors passed as XML somehow and accessed
+    // via input()
+    if (messages.seenErrors())
+      {
+        ctx.response.reset();
+        ServletOutputStream out = ctx.response.getOutputStream();
+        out.print(messages.toString(20));
+        return null;
+      }
+
+    Class cl = ModuleExp.evalToClass(comp);
+    minfo.moduleClass = cl;
+    minfo.className = cl.getName();
+
+    if (saveClass)
+      comp.outputClass(context.getRealPath("WEB-INF/classes")+'/');
+
+    return mcontext.findInstance(minfo);
   }
 }
 
